--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,8 @@
             "impliedStrict": true
         }
     },
-    "env": {}
+    "env": {},
+    "rules": {
+      "quotes": ["error", "single", { "avoidEscape": true } ]
+    }
 }
