--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,10 @@
     "socket.io": "^2.2.0",
     "zeromq": "^5.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-plugin-security": "^1.4.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node tanglemonitor.js"
